Fix #grid aligning

--- a/style.css
+++ b/style.css
@@ -1,27 +1,27 @@
 body {
     margin: 0px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
     background-color: bisque;
+    flex-direction: column;
+    align-items: center;
 }
 #grid {
     width: 600px;
     height: 600px;
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 .column > div {
     background-color: white;
-    width: 150px;
-    height: 150px;
+    width: 20px;
+    height: 20px;
 }
-
 
 .column > .hover {
     background: black;
 }
+
 button {
     margin: 20px;
 }
